--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   google_sign_in: ^6.1.0
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
+  font_awesome_flutter: ^10.4.0
+  bloc: ^8.1.1
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
@@ -56,16 +59,13 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/GoogleLogo.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
