Added different fonts, and a background gradient for the container

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/GoogleLogo.png
+    - assets/background.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -78,17 +79,22 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Inter-Black
+      fonts:
+        - asset: assets/fonts/Inter-Black.ttf
+
+    - family: WorkSans-Black
+      fonts:
+        - asset: assets/fonts/WorkSans-Black.ttf
+
+    - family: Heavy Duty Solid
+      fonts:
+        - asset: assets/fonts/Heavy Duty Solid.ttf
+
+    - family: Philosopher-Regular
+      fonts:
+        - asset: assets/fonts/Philosopher-Regular.ttf
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
